# RustSim

./: .gitignore  Cargo.toml  README.md  TRANSFER_FUNCTION_IMPLEMENTATION.md
.github/workflows/: ci.yml
benches/: solver_benchmark.rs
comparison/: COUPLED_OSCILLATORS.md  PATHSIM_BENCHMARK_SUMMARY.md  QUICK_REFERENCE_pathsim.md  README.md  README_pathsim.md  USAGE_pathsim.md  benchmark_report.txt  coupled_oscillators_pathsim.py  harmonic_oscillator_python.py  harmonic_oscillator_rust.rs  pathsim_benchmark.py  run_benchmarks.sh  run_coupled_oscillators_comparison.sh  test_pathsim_benchmark.py
crates/rustsim-app/: Cargo.toml
crates/rustsim-app/src/: app.rs  compiler.rs  examples.rs  icons.rs  layout.rs  lib.rs  main.rs  spectrum_utils.rs  state.rs
crates/rustsim-app/src/plotting/: decimation.rs  export.rs  mod.rs
crates/rustsim-app/src/routing/: astar.rs  mod.rs  orthogonal.rs  tests.rs
crates/rustsim-app/src/state/: app_state.rs  canvas_state.rs  graph_state.rs  history_state.rs  mod.rs  plot_state.rs  simulation_state.rs  tests.rs
crates/rustsim-app/src/subsystem/: editor.rs  mod.rs  navigation.rs
crates/rustsim-app/src/ui/: code_viewer.rs  compilation_log.rs  mod.rs  node_graph.rs  node_preview.rs  palette.rs  plot_settings.rs  plots.rs  properties.rs  spectrum_plot.rs  toolbar.rs
crates/rustsim-app/tests/: multi_signal_integration_test.rs  plot_tests.rs  state_tests.rs  test_ghost_traces.rs  test_interpreter_vs_compiled.rs  test_node_preview.rs  test_plot_settings.rs  test_plotting.rs  test_spectrum_fft.rs  ui_tests.rs
crates/rustsim-codegen/: Cargo.toml
crates/rustsim-codegen/src/: generator.rs  lib.rs
crates/rustsim-core/: Cargo.toml
crates/rustsim-core/benches/: rustsim_benchmark.rs
crates/rustsim-core/examples/: arena_vs_trait_object.rs  bandstop_filter.rs  coupled_oscillators_rustsim.rs  dynamic_blocks_demo.rs  fir_filter.rs  harmonic_oscillator.rs  mimo_example.rs  mimo_test.rs  pathsim_pid_control.rs  pathsim_style_api.rs  pid_control.rs  scope_csv_export.rs  signal_processing.rs  simple_integration.rs  simulation_runner.rs  spectrum_analysis.rs  test_converters.rs  transfer_function.rs  van_der_pol.rs  zpk_transfer_function.rs
crates/rustsim-core/src/: block.rs  block_kind.rs  lib.rs
crates/rustsim-core/src/blocks/: adder.rs  amplifier.rs  butterworth.rs  counter.rs  differentiator.rs  fir.rs  function.rs  integrator.rs  kalman.rs  logic.rs  math.rs  mod.rs  multiplier.rs  noise.rs  samplehold.rs  scope.rs  sources.rs  spectrum.rs  table.rs  transfer_function.rs  zpk.rs
crates/rustsim-core/src/events/: base.rs  condition.rs  mod.rs  zerocrossing.rs
crates/rustsim-core/src/optim/: anderson.rs  mod.rs  operator.rs
crates/rustsim-core/src/solvers/: QUICK_REFERENCE.md  base.rs  dirk2.rs  esdirk32.rs  esdirk4.rs  euler.rs  gear.rs  mod.rs  rkbs32.rs  rkdp54.rs  rkf45.rs  rkv65.rs  ssprk.rs
crates/rustsim-core/tests/: REFERENCE_PROBLEMS.md  basic_tests.rs  converters_integration.rs  test_bouncingball_system.rs  test_brusselator_system.rs  test_butterworth_bandstop.rs  test_fitzhughnagumo_system.rs  test_gear.rs  test_rk_solvers.rs  test_scope_export.rs  test_spectrum.rs  test_transfer_function.rs  test_vanderpol_system.rs  test_zpk.rs
crates/rustsim-runtime/: Cargo.toml
crates/rustsim-runtime/src/: lib.rs  platform.rs  plugin.rs
crates/rustsim-runtime/src/platform/: native.rs  wasm.rs
crates/rustsim-types/: Cargo.toml
crates/rustsim-types/src/: block.rs  connection.rs  graph.rs  lib.rs  node.rs  port.rs  settings.rs  simstate.rs
docs/: converters_quick_reference.md
examples/: dynamic_blocks_demo.rs  fir_filter.rs  harmonic_oscillator.rs  pid_control.rs  scope_csv_export.rs  signal_processing.rs  simple_integration.rs  test_converters.rs  van_der_pol.rs
src/: block.rs  lib.rs  main.rs
src/blocks/: adder.rs  amplifier.rs  butterworth.rs  converters.rs  delay.rs  differentiator.rs  filters.rs  fir.rs  function.rs  kalman.rs  math.rs  mod.rs  multiplier.rs  noise.rs  ode.rs  pid.rs  samplehold.rs  scope.rs  sources.rs  spectrum.rs  statespace.rs  table.rs
src/events/: condition.rs  mod.rs  schedule.rs
src/optim/: operator.rs
src/solvers/: ARCHITECTURE.md  BUTCHER_TABLEAUX.md  README.md  bdf.rs  dirk3.rs  esdirk32.rs  esdirk4.rs  esdirk43.rs  esdirk54.rs  esdirk85.rs  euler_backward.rs  gear.rs  optimizer.rs  rk4.rs  rkbs32.rs  rkck54.rs  rkdp54.rs  rkdp87.rs  rkf21.rs  rkf45.rs  rkf78.rs  rkv65.rs  ssprk.rs
src/utils/: constants.rs  mod.rs
tests/: basic_tests.rs  converters_integration.rs  integration_tests.rs  test_bouncingball_system.rs  test_brusselator_system.rs  test_esdirk.rs  test_events.rs  test_fitzhughnagumo_system.rs  test_gear.rs  test_lorenz_system.rs  test_rk_solvers.rs  test_robertson_system.rs  test_solvers.rs  test_table.rs  test_vanderpol_system.rs  test_volterralotka_system.rs  v2_tests.rs
