[workspace]
resolver = "2"
members = [
    "crates/rustsim-core",
    "crates/rustsim-types",
    "crates/rustsim-codegen",
    "crates/rustsim-runtime",
    "crates/rustsim-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yongkyun Shin"]
license = "MIT"

[workspace.dependencies]
# Internal crates
rustsim-core = { path = "crates/rustsim-core" }
rustsim-types = { path = "crates/rustsim-types" }
rustsim-codegen = { path = "crates/rustsim-codegen" }
rustsim-runtime = { path = "crates/rustsim-runtime" }

# Linear algebra and arrays
nalgebra = "0.33"
ndarray = "0.16"

# Numeric traits and complex numbers
num-traits = "0.2"
num-complex = "0.4"
simba = "0.9"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Collections and utilities
smallvec = "1.13"
arrayvec = "0.7"
slotmap = "1.0"

# FFT
rustfft = "6.2"

# CSV
csv = "1.3"

# GUI
eframe = "0.30"
egui = "0.30"
egui_plot = "0.30"
egui_extras = { version = "0.30", features = ["image", "svg"] }

# WASM support
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

# Native dynamic loading
libloading = "0.8"
tempfile = "3"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Unique IDs
uuid = { version = "1.0", features = ["v4"] }

# Syntax highlighting
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }

# Graph layout
layout-rs = "0.1"

# File dialogs
rfd = "0.15"

# Testing
approx = "0.5"
proptest = "1.4"
criterion = "0.5"

# Fast release for development (use: cargo run --profile release-dev)
[profile.release-dev]
inherits = "release"
lto = false
codegen-units = 16
incremental = true

# Maximum optimization for distribution
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
