[package]
name = "rustsim-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Platform-abstracted simulation runtime for RustSim (native dylib / WASM)"

[dependencies]
rustsim-types = { workspace = true }
rustsim-codegen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Native only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

# WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "console",
] }

[features]
default = []
