[package]
name = "rustsim-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared types for RustSim: graph nodes, connections, and simulation configuration"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
